# decision-stump-c50

./: .gitignore  LICENSE  README.md  generate_benchmark_nb.py  generate_nb.py  generate_notebooks.py  pyproject.toml  requirements.txt
docs/: algo.md  experiments.md  report.md  spec.md
notebooks/: 00_data_check.ipynb  01_sanity_baselines.ipynb  02_final_results.ipynb  03_benchmark_robustness.ipynb
scripts/: generate_figures.py  make_figures.py  make_final_figures.py  process_data.py  train_eval.py
src/: __init__.py  criteria.py  metrics.py  preprocessing.py  splitters.py  stump.py  utils.py
tests/: test_criteria.py  test_end_to_end.py  test_missing_values.py  test_splitters.py  test_stump_api.py
